fix: bg image not covering screen

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
 body {
 	@apply m-0 p-0;
-	@apply bg-stardew-background bg-fixed;
+	@apply bg-stardew-background bg-cover bg-fixed;
 	@apply fill-zinc-700 text-zinc-700;
 }
 
